--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_map_location_marker: ^10.0.0
   location: ^8.0.0
   equatable: ^2.0.7
+  flutter_dial_knob: ^0.0.3
 
 dev_dependencies:
   flutter_test:
