--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   location: ^8.0.0
   equatable: ^2.0.7
   flutter_dial_knob: ^0.0.3
+  get_it: ^8.0.3
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
