--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   http: ^1.3.0
   url_launcher: ^6.3.1
   geocoding: ^3.0.0
+  share_plus: ^10.1.4
 
 dev_dependencies:
   flutter_test:
